--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~52.0.46",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
+    "expo-sqlite": "^15.2.9",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
