--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "expo": "~52.0.46",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
-    "expo-sqlite": "^15.2.9",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
@@ -27,7 +26,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-sqlite": "~15.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
