--- a/package.json
+++ b/package.json
@@ -14,24 +14,27 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~52.0.46",
+    "expo": "^53.0.8",
     "expo-font": "^13.0.4",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-status-bar": "~2.0.1",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "^19.0.0",
+    "react-native": "^0.79.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-sqlite": "~15.1.4"
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@react-native-community/cli": "latest",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
