--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~52.0.46",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.0.2",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
@@ -27,6 +28,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
