--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.3.0",
+    "@google/generative-ai": "^0.8.0",
     "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.9.0",
     "expo": "^53.0.7",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.4",
@@ -23,9 +26,11 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
     "react": "19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-progress": "^5.0.1",
