--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,22 +14,29 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "^53.0.8",
+    "expo": "53.0.9",
+    "expo-file-system": "^18.1.10",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-sharing": "^13.1.5",
+    "expo-splash-screen": "^0.30.8",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.7",
     "firebase": "^11.6.0",
+    "flask": "^0.2.10",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "sklearn": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
